--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
 	"dependencies": {
-		"@t3-oss/env-core": "^0.11.1",
+		"@tanstack/react-query": "^5.59.15",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-tv-space-navigation": "^5.1.0",
+		"zustand": "^5.0.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.2",
