config(tsconfig): simplify, use only root, remove app & node

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,22 @@
 {
-	"files": [],
-	"references": [
-		{
-			"path": "./tsconfig.app.json"
-		},
-		{
-			"path": "./tsconfig.node.json"
+	"compilerOptions": {
+		"allowJs": true,
+		"esModuleInterop": true,
+		"incremental": true,
+		"isolatedModules": true,
+		"jsx": "preserve",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"module": "esnext",
+		"moduleResolution": "node",
+		"noEmit": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"strict": false,
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/*"]
 		}
-	]
+	},
+	"exclude": ["node_modules"],
+	"include": ["src", "src/declaration/vite-env.d", "src/declaration/ts-reset.d"]
 }
