config(bundlewatch): setup for react vite build

--- a/bundlewatch.config.json
+++ b/bundlewatch.config.json
@@ -1,20 +1,12 @@
 {
 	"files": [
 		{
-			"path": ".next/static/chunks/*.js",
-			"maxSize": "200kB"
+			"path": "dist/assets/*.js",
+			"maxSize": "190kB"
 		},
 		{
-			"path": ".next/static/css/*.css",
-			"maxSize": "100kB"
-		},
-		{
-			"path": ".next/static/media/*",
-			"maxSize": "500kB"
-		},
-		{
-			"path": ".next/server/**/*.js",
-			"maxSize": "300kB"
+			"path": "dist/assets/*.css",
+			"maxSize": "10kB"
 		}
 	],
 	"compression": "gzip"
