--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
 	"dependencies": {
 		"@tanstack/react-query": "^5.59.15",
+		"clsx": "^2.1.1",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-tv-space-navigation": "^5.1.0",
+		"tailwind-merge": "^2.5.4",
 		"zustand": "^5.0.0"
 	},
 	"devDependencies": {
