--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@noriginmedia/norigin-spatial-navigation": "^2.2.1",
 		"@tanstack/react-query": "^5.59.15",
 		"clsx": "^2.1.1",
 		"react": "^18",
