--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"clsx": "^2.1.1",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-router-dom": "^6.27.0",
 		"tailwind-merge": "^2.5.4",
 		"zustand": "^5.0.0"
 	},
