--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
 		"@noriginmedia/norigin-spatial-navigation": "^2.2.1",
 		"@tanstack/react-query": "^5.59.15",
 		"clsx": "^2.1.1",
+		"framer-motion": "^11.11.9",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-intersection-observer": "^9.13.1",
+		"react-lazy-load-image-component": "^1.6.2",
 		"react-router-dom": "^6.27.0",
 		"tailwind-merge": "^2.5.4",
 		"zustand": "^5.0.0"
@@ -18,6 +20,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-lazy-load-image-component": "^1.6.4",
 		"@vitejs/plugin-react-swc": "^3.7.0",
 		"autoprefixer": "^10.0.1",
 		"bun-types": "latest",
