--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
 		"allowJs": true,
+		"alwaysStrict": true,
+		"baseUrl": ".",
 		"esModuleInterop": true,
 		"incremental": true,
 		"isolatedModules": true,
@@ -9,13 +11,15 @@
 		"module": "esnext",
 		"moduleResolution": "node",
 		"noEmit": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"strict": false,
-		"baseUrl": ".",
+		"noErrorTruncation": true,
+		"noImplicitAny": true,
+		"noUnusedParameters": true,
 		"paths": {
 			"@/*": ["./src/*"]
-		}
+		},
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"strict": true
 	},
 	"exclude": ["node_modules"],
 	"include": ["src", "src/declaration/vite-env.d", "src/declaration/ts-reset.d"]
