--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-	"recommendations": ["biomejs.biome"]
+	"recommendations": ["biomejs.biome", "emeraldwalk.RunOnSave", "bradlc.vscode-tailwindcss"]
 }
