config(biome & lefthook): rules & build actions

--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,8 @@
 			},
 			"recommended": true,
 			"suspicious": {
-				"noArrayIndexKey": "off"
+				"noArrayIndexKey": "off",
+				"noShadowRestrictedNames": "off"
 			}
 		}
 	},
